--- a/Code/Lecture2-Practice-Code.ipynb
+++ b/Code/Lecture2-Practice-Code.ipynb
@@ -18,21 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
-    "os.chdir('/Users/hamed/Desktop/SF-DAT-20/Data/') #PLEASE SET THIS WORKING DIRECTORY TO YOURS\n",
+    "os.chdir('../Data/') #PLEASE SET THIS WORKING DIRECTORY TO YOURS\n",
     "data = pd.read_csv('ozone.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,13 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ozone' 'Solar.R' 'Wind' 'Temp' 'Month' 'Day']\n"
+     ]
+    }
+   ],
    "source": [
-    "#hint check data.columns.values and use a for loop to show values line by line"
+    "#hint check data.columns.values and use a for loop to show values line by line\n",
+    "print data.columns.values"
    ]
   },
   {
@@ -82,12 +92,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ozone</th>\n",
+       "      <th>Solar.R</th>\n",
+       "      <th>Wind</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41</td>\n",
+       "      <td>190</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>67</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>118</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ozone  Solar.R  Wind  Temp  Month  Day\n",
+       "0     41      190   7.4    67      5    1\n",
+       "1     36      118   8.0    72      5    2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,13 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#"
+    "len(data)"
    ]
   },
   {
@@ -117,12 +190,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ozone</th>\n",
+       "      <th>Solar.R</th>\n",
+       "      <th>Wind</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>18</td>\n",
+       "      <td>131</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>20</td>\n",
+       "      <td>223</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Ozone  Solar.R  Wind  Temp  Month  Day\n",
+       "151     18      131   8.0    76      9   29\n",
+       "152     20      223  11.5    68      9   30"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,12 +258,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ozone       21.0\n",
+       "Solar.R    191.0\n",
+       "Wind        14.9\n",
+       "Temp        77.0\n",
+       "Month        6.0\n",
+       "Day         16.0\n",
+       "Name: 46, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[46]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.isnull(data['Ozone']).sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,12 +323,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    116.000000\n",
+       "mean      42.129310\n",
+       "std       32.987885\n",
+       "min        1.000000\n",
+       "25%       18.000000\n",
+       "50%       31.500000\n",
+       "75%       63.250000\n",
+       "max      168.000000\n",
+       "Name: Ozone, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Ozone'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.12931034482759"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data['Ozone'] > 0, 'Ozone'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,12 +383,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "212.8"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[(data['Ozone'] > 31) & (data['Temp'] > 90),'Solar.R'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,12 +412,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.1"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data['Month']==6,'Temp'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,12 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data['Month']==5,'Ozone'].max()"
+   ]
   },
   {
    "cell_type": "code",
@@ -264,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
