--- a/Code/Scratchpad.ipynb
+++ b/Code/Scratchpad.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -38,6 +45,15 @@
    "source": [
     "pd.DataFrame([10,4,5,1]).std()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -268,6 +284,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Class 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.696963562753\n"
+     ]
+    }
+   ],
+   "source": [
+    "R2 = .7\n",
+    "n = 500\n",
+    "k = 5\n",
+    "\n",
+    "r2_adj = 1-(((1-R2)*(n-1))/(n-k-1))\n",
+    "print r2_adj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.7502"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B0 = 6.7502\n",
+    "B1 = 0\n",
+    "B2 = 0\n",
+    "B3 = 0\n",
+    "\n",
+    "tv = 0.019\n",
+    "radio = 0.0289\n",
+    "error = 0\n",
+    "\n",
+    "B0+B1*tv+B2*radio + B3 * (radio * tv) + error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "est 52.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "B1 = 0.019 # multiple of 1000 (TV Sales)\n",
+    "B3 = 0.0011 # multiple of 1000 (TV x Radio coeff)\n",
+    "radio = 30 # Radio spend in 1000\n",
+    "print \"est\",(B1 + B3 * radio) * 1000\n",
+    "\n",
+    "# maps to 29 + 1.1 * TV units\n",
+    "# 29 is the coeff of radio (0.0289)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -293,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
