--- a/Code/Lecture3-Practice-Code.ipynb
+++ b/Code/Lecture3-Practice-Code.ipynb
@@ -337,7 +337,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "Answer: \n",
     "\n",
     "TV expenditure is highly variable, \n",
@@ -347,9 +346,6 @@
     "Newspaper has occasionally spent more that presents as outliers but skews to the right, \n",
     "\n",
     "and sales don't seem to be too great."
-=======
-    "Answer: \n"
->>>>>>> e8e94395fa2da8f55e327b2518cbcefe81e02800
    ]
   },
   {
@@ -453,7 +449,7 @@
    "metadata": {},
    "source": [
     "What did you learn from correlation Matrix?\n",
-    "Answer: \n"
+    "Answer: "
    ]
   },
   {
@@ -566,11 +562,7 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
     "whisk['TV']+q3['TV']"
-=======
-    "#Step 3\n"
->>>>>>> e8e94395fa2da8f55e327b2518cbcefe81e02800
    ]
   },
   {
