--- a/Code/Lecture7.ipynb
+++ b/Code/Lecture7.ipynb
@@ -41,346 +41,99 @@
        "      <th></th>\n",
        "      <th>survived</th>\n",
        "      <th>pclass</th>\n",
-       "      <th>name</th>\n",
-       "      <th>sex</th>\n",
        "      <th>age</th>\n",
        "      <th>sibsp</th>\n",
        "      <th>parch</th>\n",
-       "      <th>ticket</th>\n",
        "      <th>fare</th>\n",
-       "      <th>cabin</th>\n",
-       "      <th>embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <th>count</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>714.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.383838</td>\n",
+       "      <td>2.308642</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0.523008</td>\n",
+       "      <td>0.381594</td>\n",
+       "      <td>32.204208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.486592</td>\n",
+       "      <td>0.836071</td>\n",
+       "      <td>14.526497</td>\n",
+       "      <td>1.102743</td>\n",
+       "      <td>0.806057</td>\n",
+       "      <td>49.693429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>20.125000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.910400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Moran, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330877</td>\n",
-       "      <td>8.4583</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.454200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>McCarthy, Mr. Timothy J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17463</td>\n",
-       "      <td>51.8625</td>\n",
-       "      <td>E46</td>\n",
-       "      <td>S</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>31.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Palsson, Master. Gosta Leonard</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>349909</td>\n",
-       "      <td>21.0750</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>347742</td>\n",
-       "      <td>11.1333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>237736</td>\n",
-       "      <td>30.0708</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
-       "      <td>female</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PP 9549</td>\n",
-       "      <td>16.7000</td>\n",
-       "      <td>G6</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bonnell, Miss. Elizabeth</td>\n",
-       "      <td>female</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113783</td>\n",
-       "      <td>26.5500</td>\n",
-       "      <td>C103</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Saundercock, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5. 2151</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Andersson, Mr. Anders Johan</td>\n",
-       "      <td>male</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>347082</td>\n",
-       "      <td>31.2750</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Vestrom, Miss. Hulda Amanda Adolfina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>350406</td>\n",
-       "      <td>7.8542</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hewlett, Mrs. (Mary D Kingcome)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>55</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>248706</td>\n",
-       "      <td>16.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Rice, Master. Eugene</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>382652</td>\n",
-       "      <td>29.1250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Williams, Mr. Charles Eugene</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>244373</td>\n",
-       "      <td>13.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Vander Planke, Mrs. Julius (Emelia Maria Vande...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>345763</td>\n",
-       "      <td>18.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Masselmani, Mrs. Fatima</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2649</td>\n",
-       "      <td>7.2250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>512.329200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    survived  pclass                                               name  \\\n",
-       "0          0       3                            Braund, Mr. Owen Harris   \n",
-       "1          1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
-       "2          1       3                             Heikkinen, Miss. Laina   \n",
-       "3          1       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
-       "4          0       3                           Allen, Mr. William Henry   \n",
-       "5          0       3                                   Moran, Mr. James   \n",
-       "6          0       1                            McCarthy, Mr. Timothy J   \n",
-       "7          0       3                     Palsson, Master. Gosta Leonard   \n",
-       "8          1       3  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)   \n",
-       "9          1       2                Nasser, Mrs. Nicholas (Adele Achem)   \n",
-       "10         1       3                    Sandstrom, Miss. Marguerite Rut   \n",
-       "11         1       1                           Bonnell, Miss. Elizabeth   \n",
-       "12         0       3                     Saundercock, Mr. William Henry   \n",
-       "13         0       3                        Andersson, Mr. Anders Johan   \n",
-       "14         0       3               Vestrom, Miss. Hulda Amanda Adolfina   \n",
-       "15         1       2                   Hewlett, Mrs. (Mary D Kingcome)    \n",
-       "16         0       3                               Rice, Master. Eugene   \n",
-       "17         1       2                       Williams, Mr. Charles Eugene   \n",
-       "18         0       3  Vander Planke, Mrs. Julius (Emelia Maria Vande...   \n",
-       "19         1       3                            Masselmani, Mrs. Fatima   \n",
-       "\n",
-       "       sex  age  sibsp  parch            ticket     fare cabin embarked  \n",
-       "0     male   22      1      0         A/5 21171   7.2500   NaN        S  \n",
-       "1   female   38      1      0          PC 17599  71.2833   C85        C  \n",
-       "2   female   26      0      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3   female   35      1      0            113803  53.1000  C123        S  \n",
-       "4     male   35      0      0            373450   8.0500   NaN        S  \n",
-       "5     male  NaN      0      0            330877   8.4583   NaN        Q  \n",
-       "6     male   54      0      0             17463  51.8625   E46        S  \n",
-       "7     male    2      3      1            349909  21.0750   NaN        S  \n",
-       "8   female   27      0      2            347742  11.1333   NaN        S  \n",
-       "9   female   14      1      0            237736  30.0708   NaN        C  \n",
-       "10  female    4      1      1           PP 9549  16.7000    G6        S  \n",
-       "11  female   58      0      0            113783  26.5500  C103        S  \n",
-       "12    male   20      0      0         A/5. 2151   8.0500   NaN        S  \n",
-       "13    male   39      1      5            347082  31.2750   NaN        S  \n",
-       "14  female   14      0      0            350406   7.8542   NaN        S  \n",
-       "15  female   55      0      0            248706  16.0000   NaN        S  \n",
-       "16    male    2      4      1            382652  29.1250   NaN        Q  \n",
-       "17    male  NaN      0      0            244373  13.0000   NaN        S  \n",
-       "18  female   31      1      0            345763  18.0000   NaN        S  \n",
-       "19  female  NaN      0      0              2649   7.2250   NaN        C  "
+       "         survived      pclass         age       sibsp       parch        fare\n",
+       "count  891.000000  891.000000  714.000000  891.000000  891.000000  891.000000\n",
+       "mean     0.383838    2.308642   29.699118    0.523008    0.381594   32.204208\n",
+       "std      0.486592    0.836071   14.526497    1.102743    0.806057   49.693429\n",
+       "min      0.000000    1.000000    0.420000    0.000000    0.000000    0.000000\n",
+       "25%      0.000000    2.000000   20.125000    0.000000    0.000000    7.910400\n",
+       "50%      0.000000    3.000000   28.000000    0.000000    0.000000   14.454200\n",
+       "75%      1.000000    3.000000   38.000000    1.000000    0.000000   31.000000\n",
+       "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
      "execution_count": 3,
@@ -390,7 +143,8 @@
    ],
    "source": [
     "TitanicRawData['age'].count()\n",
-    "TitanicRawData.head(20)"
+    "TitanicRawData.head(20)\n",
+    "TitanicRawData.describe()"
    ]
   },
   {
