--- a/Code/Scratchpad.ipynb
+++ b/Code/Scratchpad.ipynb
@@ -412,6 +412,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class 6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
