--- a/Code/Lecture6-Practice-Solution.ipynb
+++ b/Code/Lecture6-Practice-Solution.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "url = \"https://raw.githubusercontent.com/ga-students/SF-DAT-20/master/Data/Boston.csv\"\n",
+    "url = \"../Data/Boston.csv\"\n",
     "BostonData = pd.read_csv(url)\n",
     "del BostonData['Unnamed: 0']\n",
     "BostonData.head(2)"
