--- a/Code/Scratchpad.ipynb
+++ b/Code/Scratchpad.ipynb
@@ -415,8 +415,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class 6"
+    "## Class 9"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005770269762043184"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e=2.7172\n",
+    "e**(-10.6513+0.0055*1000)/(1+e**(-10.6513+0.0055*1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5862686292425972"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intercept = -10.6513\n",
+    "bal_coef = 0.0055\n",
+    "balance = 2000\n",
+    "e**(intercept+bal_coef*balance)/(1+e**(intercept+bal_coef*balance))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3487\n"
+     ]
+    }
+   ],
+   "source": [
+    "odds_log = intercept + bal_coef * balance\n",
+    "print odds_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
