--- a/Code/Lecture9-Practice-Code.ipynb
+++ b/Code/Lecture9-Practice-Code.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/albarron/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,11 +19,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>4789</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>220</td>\n",
+       "      <td>1</td>\n",
+       "      <td>339</td>\n",
+       "      <td>4</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>single</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>185</td>\n",
+       "      <td>1</td>\n",
+       "      <td>330</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1476</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>199</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  marital  education default  balance housing loan   contact  duration  \\\n",
+       "0   30  married    primary      no     1787      no   no  cellular        79   \n",
+       "1   33  married  secondary      no     4789     yes  yes  cellular       220   \n",
+       "2   35   single   tertiary      no     1350     yes   no  cellular       185   \n",
+       "3   30  married   tertiary      no     1476     yes  yes   unknown       199   \n",
+       "4   59  married  secondary      no        0     yes   no   unknown       226   \n",
+       "\n",
+       "   campaign  pdays  previous poutcome   y  \n",
+       "0         1     -1         0  unknown  no  \n",
+       "1         1    339         4  failure  no  \n",
+       "2         1    330         1  failure  no  \n",
+       "3         4     -1         0  unknown  no  \n",
+       "4         1     -1         0  unknown  no  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = \"../Data/bank.csv\"\n",
     "BankData = pd.read_csv(url)\n",
@@ -41,11 +167,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>41.170095</td>\n",
+       "      <td>1422.657819</td>\n",
+       "      <td>263.961292</td>\n",
+       "      <td>2.793630</td>\n",
+       "      <td>39.766645</td>\n",
+       "      <td>0.542579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.576211</td>\n",
+       "      <td>3009.638142</td>\n",
+       "      <td>259.856633</td>\n",
+       "      <td>3.109807</td>\n",
+       "      <td>100.121124</td>\n",
+       "      <td>1.693562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>-3313.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>444.000000</td>\n",
+       "      <td>185.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>1480.000000</td>\n",
+       "      <td>329.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>71188.000000</td>\n",
+       "      <td>3025.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>871.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               age       balance     duration     campaign        pdays  \\\n",
+       "count  4521.000000   4521.000000  4521.000000  4521.000000  4521.000000   \n",
+       "mean     41.170095   1422.657819   263.961292     2.793630    39.766645   \n",
+       "std      10.576211   3009.638142   259.856633     3.109807   100.121124   \n",
+       "min      19.000000  -3313.000000     4.000000     1.000000    -1.000000   \n",
+       "25%      33.000000     69.000000   104.000000     1.000000    -1.000000   \n",
+       "50%      39.000000    444.000000   185.000000     2.000000    -1.000000   \n",
+       "75%      49.000000   1480.000000   329.000000     3.000000    -1.000000   \n",
+       "max      87.000000  71188.000000  3025.000000    50.000000   871.000000   \n",
+       "\n",
+       "          previous  \n",
+       "count  4521.000000  \n",
+       "mean      0.542579  \n",
+       "std       1.693562  \n",
+       "min       0.000000  \n",
+       "25%       0.000000  \n",
+       "50%       0.000000  \n",
+       "75%       0.000000  \n",
+       "max      25.000000  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BankData.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['no', 'yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "BankData['y'].unique()  #you can use unique if you would like to find out how many unique attributes each variable have"
    ]
@@ -73,11 +341,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>y</th>\n",
+       "      <th>marital_single</th>\n",
+       "      <th>default_yes</th>\n",
+       "      <th>housing_yes</th>\n",
+       "      <th>loan_yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>4789</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>220</td>\n",
+       "      <td>1</td>\n",
+       "      <td>339</td>\n",
+       "      <td>4</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>single</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>185</td>\n",
+       "      <td>1</td>\n",
+       "      <td>330</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1476</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>199</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  marital  education default  balance housing loan   contact  duration  \\\n",
+       "0   30  married    primary      no     1787      no   no  cellular        79   \n",
+       "1   33  married  secondary      no     4789     yes  yes  cellular       220   \n",
+       "2   35   single   tertiary      no     1350     yes   no  cellular       185   \n",
+       "3   30  married   tertiary      no     1476     yes  yes   unknown       199   \n",
+       "4   59  married  secondary      no        0     yes   no   unknown       226   \n",
+       "\n",
+       "   campaign  pdays  previous poutcome   y  marital_single  default_yes  \\\n",
+       "0         1     -1         0  unknown  no               0            0   \n",
+       "1         1    339         4  failure  no               0            0   \n",
+       "2         1    330         1  failure  no               1            0   \n",
+       "3         4     -1         0  unknown  no               0            0   \n",
+       "4         1     -1         0  unknown  no               0            0   \n",
+       "\n",
+       "   housing_yes  loan_yes  \n",
+       "0            0         0  \n",
+       "1            1         1  \n",
+       "2            1         0  \n",
+       "3            1         1  \n",
+       "4            1         0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Default_dummy  = pd.get_dummies(BankData['default'], prefix = 'default')\n",
     "del Default_dummy['default_no']\n",
@@ -100,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -119,12 +553,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['age', 'balance', 'duration', 'campaign', 'pdays', 'previous', 'marital_single', 'default_yes', 'housing_yes', 'loan_yes']\n",
+      "[[  1.42591061e-03   1.05992731e-05   3.78467615e-03  -9.08096412e-02\n",
+      "    2.42752182e-03   9.52584601e-02   1.70430360e-01   1.39078610e-01\n",
+      "   -9.89402819e-01  -8.53963269e-01]]\n",
+      "[-2.83913141]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(X,y)\n",
+    "print ['age','balance','duration','campaign','pdays','previous','marital_single','default_yes','housing_yes','loan_yes']\n",
+    "print logreg.coef_\n",
+    "print logreg.intercept_\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,12 +587,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.88300221,  0.89159292,  0.88053097,  0.90265487,  0.88495575,\n",
+       "        0.89159292,  0.87831858,  0.90707965,  0.89159292,  0.88716814])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sklearn.cross_validation.cross_val_score\n",
+    "#(estimator, X, y=None, scoring=None, cv=None, \n",
+    "#n_jobs=1, verbose=0, fit_params=None, pre_dispatch='2*n_jobs')[source]\n",
+    "cross_val_score(logreg,X,y,cv=10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +620,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3923,   77],\n",
+       "       [ 425,   96]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat = logreg.predict(X)\n",
+    "confusion_matrix(y,y_hat)"
+   ]
   },
   {
    "cell_type": "markdown",
